# KIDS25-Team9

./: .gitignore  LICENSE  README.md  maskrcnn_config.json  pyproject.toml
src/ai_image_lab/: __init__.py  _widget.py  napari.yaml
src/ai_image_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/configs/fine_tune_sam/: config.json
src/configs/instance/: maskrcnn_config_train.json
src/configs/semantic_3d/: config.json
src/configs/unet_2d/: unet_2d_config.json
src/data_annotation/: data_annotator.py  mask_interpolator.py  maskinterpolator.py
src/data_augmentation/: augment_images.py
src/models/: base_model.py  mask_rcnn_model.py  sam2.py  unet3d.py  unet_2d.py  unet_2d_run_script.py
src/models/Images/: 1-1.tif  1-2.tif
src/models/Labels/: 1-1.tif  1-2.tif
src/ui/: all.py  annotation_tab.py  common.py  data_processing_tab.py  fine_tune_sam_tab.py  inference_tab.py  main_tab.py  simple.ui  state.py  styles.py  train_tab.py
src/utilities/: maskrcnn_dataset_builder.py  unet_2d_dataset_builder.py
