[project]
name = "ai-image-lab"
version = "0.0.1"
classifiers = [
    "Framework :: napari",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."napari.manifest"]
ai-image-lab = "ai_image_lab:napari.yaml"

